<resources>
    <string name="app_name" translatable="false">FixMyPhone</string>
    <string name="button_start">Test</string>
    <string name="button_stop">Stop</string>
    <string name="onboot_label">Calibrate on boot (needs root)</string>
    <string name="button_calibrate">Calibrate now (needs root)</string>
    <string name="calibration_success">Proximity sensor successfully calibrated</string>
    <string name="calibration_failure">Proximity sensor calibration failure</string>
    <string name="sensor_name_label">Name</string>
    <string name="sensor_vendor_label">Vendor</string>
    <string name="reset_radio">Reset radio</string>
    <string name="reset_radio_success">Radio reset successful</string>
    <string name="reset_radio_failure">Radio reset failed</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
